--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1314,5 +1314,9 @@ color: color-mix(in srgb, var(--default-color), transparent 30%);
 
 #footer {
   position: relative;
-  background: url("assets/img/cyberpunk-footer.jpg") no-repeat center center/cover;
-  }
+  background: 
+    linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
+    url("assets/img/cyberpunk-footer.jpg") no-repeat center center/cover !important;
+  color: #fff !important;
+  z-index: 0;
+}
