--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -33,7 +33,7 @@
   margin-left: 15px;
 }
 
-*--------------------------------------------------------------
+/*--------------------------------------------------------------
 # Cyberpunk Neon Section Titles - H2
 --------------------------------------------------------------*/
 
