--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -192,7 +192,7 @@
 #footer {
   position: relative;
   background: url("assets/img/cyberpunk-footer.jpg") no-repeat center center;
-  background-size: cover;  /* fills the entire area */
+  background-size: cover !important;  /* fills the entire area */
   color: #fff;
   text-align: center;
   padding: 60px 0;
